Add application properties and dependencies for Spring Boot setup

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,1 +1,17 @@
 spring.application.name=GestorAlquileres
+spring.datasource.url=${BASE_URL}
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASSWORD}
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.properties.hibernate.format_sql=true
+
+springdoc.api-docs.path=/v3/api-docs
+springdoc.swagger-ui.path=/
+springdoc.swagger-ui.enabled=true
+
+jwt.secret.key=claveSecreta
+jwt.secret.user.key=lasdfjoiwehfoiwehfoiwehfoiwehfoiwe
+jwt.expiration.time=8640000
