fix: update dockerfile and update application.properties

--- a/.github/workflows/development-workflow.yml
+++ b/.github/workflows/development-workflow.yml
@@ -46,6 +46,9 @@ jobs:
           --env DB_NAME=${{ secrets.DB_NAME }} \
           --env DB_USER=${{ secrets.DB_USER }} \
           --env DB_PASSWORD=${{ secrets.DB_PASSWORD }} \
+          --env BASE_URL=${{ secrets.BASE_URL }} \
+          --env EMAIL=${{ secrets.EMAIL }} \
+          --env PASSWORD_EMAIL=${{ secrets.PASSWORD_EMAIL }} \
           --token ${{ secrets.KOYEB_API_TOKEN }}
         
       - name: Redeploy service on Koyeb
