--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,7 +1,7 @@
 FROM maven:3.8.6-eclipse-temurin-17 AS build
 WORKDIR /workspace
 COPY . .
-RUN mvn clean package -DskipTests
+RUN mvn clean package -DskipTests -Dproject.build.sourceEncoding=UTF-8
 
 FROM eclipse-temurin:17-jre-alpine
 VOLUME /tmp
