--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -23,3 +23,6 @@ spring.mail.username=${EMAIL}
 spring.mail.password=${PASSWORD_EMAIL}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+# VARIABLES
+base-url=${BASE_URL}
