--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -6,5 +6,6 @@ RUN mvn clean package -DskipTests -Dproject.build.sourceEncoding=UTF-8
 FROM eclipse-temurin:17-jre-alpine
 VOLUME /tmp
 RUN apk add --no-cache curl
-COPY --from=build /workspace/target/*.jar app.jar
+COPY --from=build /workspace/target/backend-0.0.1-SNAPSHOT.jar app.jar
+EXPOSE 8080
 ENTRYPOINT ["java","-jar","/app.jar"]
