--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,9 @@
     "@radix-ui/react-alert-dialog": "^1.1.11",
     "@radix-ui/react-dialog": "^1.1.11",
     "@radix-ui/react-label": "^2.1.4",
+    "@radix-ui/react-separator": "^1.1.4",
     "@radix-ui/react-slot": "^1.2.0",
+    "@radix-ui/react-tooltip": "^1.2.4",
     "@tailwindcss/vite": "^4.1.4",
     "axios": "^1.8.4",
     "class-variance-authority": "^0.7.1",
