create endpoints of Bcra

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -26,6 +26,9 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 
 # VARIABLES
 base-url=${BASE_URL}
+bcra.api.key=${BCRA_API_KEY}
+bcra.url=${BCRA_URL}
+
 
 
 # Configuracion para inciar sesion con google
