feat: add file upload functionality for tenants with Cloudinary integration

--- a/backend/.env.template
+++ b/backend/.env.template
@@ -1,1 +1,14 @@
-BASE_URL==http://localhost:8080
+BASE_URL=
+DB_HOST=
+CLOUDINARY_CLOUD_NAME=
+CLOUDINARY_API_KEY=
+CLOUDINARY_API_SECRET=
+DB_PORT=
+DB_NAME=
+DB_USER=
+DB_PASSWORD=
+EMAIL=
+PASSWORD_EMAIL=
+BASE_URL=
+CLIENT_ID=
+CLIENT_SECRET=
