--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "@tailwindcss/vite": "^4.1.4",
     "axios": "^1.8.4",
     "class-variance-authority": "^0.7.1",
+    "framer-motion": "^12.10.0",
     "frontend": "file:",
     "lucide-react": "^0.501.0",
     "react": "^19.0.0",
