--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -52,3 +52,7 @@ spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 spring.mvc.contentnegotiation.media-types.pdf=application/pdf
 spring.mvc.contentnegotiation.favor-parameter=true
+
+#Certificados ssl para API BCRA
+spring.security.oauth2.client.ssl.trust-store=classpath:bcra-truststore.jks
+spring.security.oauth2.client.ssl.trust-store-password=changeit
