feat: Contract property

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -4,8 +4,7 @@ spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
-#cambiar a update para subir
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.properties.hibernate.format_sql=true
 
@@ -17,7 +16,7 @@ jwt.secret.key=claveSecreta
 jwt.secret.user.key=lasdfjoiwehfoiwehfoiwehfoiwehfoiwe
 jwt.expiration.time=8640000
 
-# Configuraciï¿½n de email
+# Configuración de email
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=${EMAIL}
@@ -42,7 +41,6 @@ spring.security.oauth2.client.provider.google.user-info-uri=https://www.googleap
 spring.security.oauth2.client.provider.google.user-name-attribute=sub
 
 # Cloduinary
-
 CLOUDINARY_CLOUD_NAME=${CLOUD_NAME}
 CLOUDINARY_API_KEY=${API_KEY}
 CLOUDINARY_API_SECRET=${API_SECRET}
