--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -42,7 +42,7 @@ jobs:
 
       - name: Update service on Koyeb
         run: |
-          koyeb service update rentary/footalent-backend \
+          koyeb service redeploy rentary/footalent-backend \
             --docker "${{ secrets.DOCKER_USERNAME }}/footalent-backend:latest" \
             --token ${{ secrets.KOYEB_API_TOKEN }}
 
