--- a/backend/.env.template
+++ b/backend/.env.template
@@ -1,14 +1,17 @@
+BCRA_URL=
+BCRA_API_KEY=
+URL_BACK=
 BASE_URL=
-DB_HOST=
-CLOUDINARY_CLOUD_NAME=
-CLOUDINARY_API_KEY=
-CLOUDINARY_API_SECRET=
-DB_PORT=
 DB_NAME=
-DB_USER=
 DB_PASSWORD=
-EMAIL=
+DB_USER=
+DB_PORT=
+URL_FRONT=
 PASSWORD_EMAIL=
-BASE_URL=
-CLIENT_ID=
+EMAIL=
 CLIENT_SECRET=
+CLIENT_ID=
+DB_HOST=
+CLOUDINARY_API_SECRET=
+CLOUDINARY_API_KEY=
+CLOUDINARY_CLOUD_NAME=
