--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "@radix-ui/react-dialog": "^1.1.11",
     "@radix-ui/react-dropdown-menu": "^2.1.14",
     "@radix-ui/react-label": "^2.1.4",
+    "@radix-ui/react-popover": "^1.1.13",
     "@radix-ui/react-select": "^2.2.4",
     "@radix-ui/react-separator": "^1.1.4",
     "@radix-ui/react-slot": "^1.2.0",
@@ -26,11 +27,14 @@
     "@tanstack/react-table": "^8.21.3",
     "axios": "^1.8.4",
     "class-variance-authority": "^0.7.1",
+    "date-fns": "^2.30.0",
     "framer-motion": "^12.10.0",
     "frontend": "file:",
     "lucide-react": "^0.501.0",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
+    "react-datepicker": "^8.3.0",
+    "react-day-picker": "8.10.1",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.1",
     "react-icons": "^5.5.0",
